// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uint8 schema test invalid values: -1 1`] = `
"expect(received).toMatchSchema(schema)

received
  should be >= 0
    Path:     byte.schema.json#/minimum
"
`;

exports[`uint8 schema test invalid values: 1.5 1`] = `
"expect(received).toMatchSchema(schema)

received
  should be integer
    Path:     byte.schema.json#/type
"
`;

exports[`uint8 schema test invalid values: 256 1`] = `
"expect(received).toMatchSchema(schema)

received
  should be <= 255
    Path:     byte.schema.json#/maximum
"
`;
